# microlens-submit

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Event_Page_Design.md  MANIFEST.in  README.md  RELEASE_NOTES.md  SUBMISSION_MANUAL.md  Solution_Page_Design.md  TODO  agents.md  pyproject.toml  requirements-dev.txt  setup.py  submission.json  test_dossier_fresh.sh  test_uncertainty_metadata.py  validate_submission.py  zenodo_draft.json
.github/workflows/: ci.yml  forward.yml  release.yml
conda/recipe/: meta.yaml
docs/: Analysis_Tutorial.ipynb  Analysis_Tutorial_Colab.ipynb  Dashboard_Design.md  PHYSICAL_PARAMS_SUMMARY.md  RELEASING.md  Refactoring_plan.md  Solution_Page_Design.md  Submission_Tool_Tutorial.ipynb  api.rst  cli_tutorial.rst  conf.py  index.rst  submission_manual.rst  tutorial.rst  usage_examples.rst
microlens_submit/: __init__.py  api.py  cli.py  dossier.py  error_messages.py  text_symbols.py  tier_validation.py  utils.py  validate_parameters.py
scripts/: bump_version.py  install_wheel.py  verify_cli_install.py
spec/: README.md  check_spec_drift.py  generate_from_spec.py  parameter_spec.yaml
tests/: README_test_dossier.md  conftest.py  example_note.md  test_api.py  test_bic_calculation.py  test_cli.py  test_cli_solution_files.py  test_dossier_generation.py  test_dossier_pages.py  test_notebook_display.py  test_physical_validation.py  test_tier_validation.py  test_uncertainty_validation.py
tests/data/: README.md  (+1 more)
tmp/: 0773651f-fecf-4466-927e-2480b43310d5.md  de866b66-bff8-4bbf-9901-55b7fb6eb919.md
(+32 files in other folders)
